overlays/uksouth-sandbox/sit/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Xss-Protection: 1; mode=block";
  name: sit.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
  - host: sit.${cluster_name}.${location}.bink.sh
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/membership_card
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/membership_cards
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/membership_plan
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/membership_plans
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/membership_transaction
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/membership_transactions
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/payment_card
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/payment_cards
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity/service
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /content
        pathType: Prefix
        backend:
          service:
            name: iris-api
            port:
              number: 80
      - path: /payment_service
        pathType: Prefix
        backend:
          service:
            name: metis-api
            port:
              number: 80
      - path: /join
        pathType: Prefix
        backend:
          service:
            name: midas-api
            port:
              number: 80
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: simplenginx
            port:
              number: 80
      - path: /cardstatus
        pathType: Prefix
        backend:
          service:
            name: pelops
            port:
              number: 80
  tls:
  - hosts:
    - sit.${cluster_name}.${location}.bink.sh
    secretName: sit.${cluster_name}.${location}.bink.sh
